--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "chart.js": "^2.9.3",
     "dayjs": "^1.8.27",
     "firebase": "^7.14.5",
+    "netlify-cli": "^6.8.5",
     "react": "^16.13.1",
     "react-chartjs-2": "^2.9.0",
     "react-dom": "^16.13.1",
